Changes for Partner Register